--- a/waterquest/assets/scss/layout/_content.scss
+++ b/waterquest/assets/scss/layout/_content.scss
@@ -102,7 +102,7 @@
 		}
 
 		&.video-stressed {
-			display: none;
+			opacity: 0;
 		}
 	}
 
